Lesson 18 page Dialogs

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,400&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .app-wrapper {
-  display: grid;
-  max-width: 1024px;
-  margin: 10px auto;
+    display: grid;
+    max-width: 1024px;
+    margin: 10px auto;
 
-  grid-template-areas:
+    grid-template-areas:
   "header header"
   "nav content";
 
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  gap: 10px;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    gap: 10px;
+}
+
+.app-wrapper-content {
+    grid-area: content;
+    background-color: lawngreen;
 }
 
