Lesson 24 added dataObject to Posts

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -12,7 +12,16 @@
 }
 
 .dialog {
+    padding: 5px;
+}
 
+.dialog a {
+    text-decoration: none;
+    color: #be3655;
+}
+
+.dialog a:hover {
+    color: white;
 }
 
 .messages {
@@ -21,4 +30,5 @@
 }
 
 .message {
+    padding: 5px;
 }
