--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
 
 .app-wrapper {
     display: grid;
-    max-width: 1024px;
-    margin: 10px auto;
+    max-width: 100vw;
+    margin: 0 auto;
 
     grid-template-areas:
   "header header"
@@ -17,11 +17,11 @@
 
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
-    gap: 10px;
 }
 
 .app-wrapper-content {
     grid-area: content;
     background-color: lawngreen;
+
 }
 
