--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -1,3 +1,8 @@
 .message {
     padding: 5px;
+    border-radius: 3px;
+    margin: 5px 0;
+    width: 300px;
+    height: 20px;
+    background-color: gainsboro;
 }
