--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,11 @@
     grid-area: header;
     background-color: #4b75a5;
     padding: 5px;
-    position: relative;
+    width: 100%;
+    height: 54px;
+    position: fixed;
+    z-index: 2;
+    /*position: relative;*/
 }
+
 
