--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,6 +2,11 @@
     grid-area: nav;
     background-color: #375c89;
     padding: 15px;
+    margin-top: 54px;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
 }
 
 .nav__menu {
