--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -10,11 +10,15 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 
     .userPhoto {
       max-width: 60px;
+      min-height: 60px;
       display: block;
+      background: url('https://icons.iconarchive.com/icons/diversity-avatars/avatars/256/batman-icon.png') top center;
+      background-size: cover;
       margin: 10px;
     }
 
