--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,18 +1,27 @@
 .logo {
     width: 50px;
-    height: auto;
-    cursor: pointer;
+    height: 50px;
+    display: block;
 }
 
 .header {
-    grid-area: header;
-    background-color: #4b75a5;
-    padding: 3px;
-    width: 100%;
-    height: 54px;
+    display: flex;
+    align-items: center;
     position: fixed;
-    z-index: 2;
-    /*position: relative;*/
+    z-index: 1000;
+    max-height: 60px;
+    width: 100%
 }
+
+/*.header {*/
+/*    grid-area: header;*/
+/*    background-color: #4b75a5;*/
+/*    padding: 3px;*/
+/*    width: 100%;*/
+/*    height: 54px;*/
+/*    position: fixed;*/
+/*    z-index: 2;*/
+/*    !*position: relative;*!*/
+/*}*/
 
 
