--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,29 +1,25 @@
-.nav {
-    grid-area: nav;
-    background-color: #375c89;
-    padding: 15px;
-    margin-top: 54px;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-}
+/*.nav {*/
+/*    grid-area: nav;*/
+/*    background-color: #375c89;*/
+/*    padding: 15px;*/
+/*    margin-top: 54px;*/
+/*    z-index: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    position: fixed;*/
+/*}*/
 
-.nav__menu {
-    list-style: none;
-}
+/*.nav__menu {*/
+/*    list-style: none;*/
+/*}*/
 
-.nav__link {
-    color: white;
-    font-weight: 500;
-    font-size: 20px;
-    text-decoration: none;
-}
+/*.nav__link {*/
+/*    color: white;*/
+/*    font-weight: 500;*/
+/*    font-size: 20px;*/
+/*    text-decoration: none;*/
+/*}*/
 
-.nav__menu-item:not(:first-child) {
-    margin-top: 5px;
-}
-
-.active {
-    color: gold;
-}
+/*.active {*/
+/*    color: gold;*/
+/*}*/
