--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -5,6 +5,30 @@
   justify-content: space-between;
   margin: 50px;
   border: 2px solid black;
+  padding-left: 30px;
+
+  .subBtn {
+    text-decoration: none;
+    outline: none;
+    display: inline-block;
+    padding: 10px;
+    width: 150px;
+    margin: 20px 20px;
+    border-radius: 15px;
+    background-image: linear-gradient(45deg, #6ab1d7 0%, #33d9de 50%, #002878 100%);
+    background-position: 100% 0;
+    background-size: 200% 200%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: white;
+    box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
+    transition: .5s;
+  }
+  .subBtn:hover {
+    box-shadow: 0 0 0 0 rgba(0,40,120,0);
+    background-position: 0 0;
+  }
 
   .photoContainer {
     height: 100%;
@@ -12,33 +36,17 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-
-    .userPhoto {
-      max-width: 60px;
-      min-height: 60px;
-      display: block;
-      background: url('https://icons.iconarchive.com/icons/diversity-avatars/avatars/256/batman-icon.png') top center;
-      background-size: cover;
-      margin: 10px;
-    }
-
-    .subBtn {
-      display: block;
-    }
   }
 
   .infoContainer {
-    width: 500px;
+    width: 200px;
     display: flex;
     justify-content: space-around;
-
-    .leftSide {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
   }
+}
+
+.userPage {
+  min-height: 100vh;
 }
 
 .page {
@@ -49,14 +57,12 @@
 
   .pageNumber {
     cursor: pointer;
-    padding: 5px 10px;
-    margin-right: 5px;
-    border-radius: 50%;
-    background-color: #4A90E2;
+    margin-right: 10px;
   }
 
   .activePage {
-    font-weight: bold;
+    background-color: #375c89;
+    border-color: #375c89;
   }
 }
 
