--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,400&display=swap');
 
-* {
+*, *:before, *:after {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
 }
+
