--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/variables';
+
 .userWrapper {
   height: 100px;
   width: 600px;
@@ -7,27 +9,41 @@
   border: 2px solid black;
   padding-left: 30px;
 
-  .subBtn {
-    text-decoration: none;
-    outline: none;
-    display: inline-block;
-    padding: 10px;
-    width: 150px;
-    margin: 20px 20px;
-    border-radius: 15px;
-    background-image: linear-gradient(45deg, #6ab1d7 0%, #33d9de 50%, #002878 100%);
-    background-position: 100% 0;
-    background-size: 200% 200%;
-    font-family: 'Montserrat', sans-serif;
+  .userName {
     font-size: 16px;
-    font-weight: 300;
-    color: white;
-    box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
-    transition: .5s;
   }
-  .subBtn:hover {
-    box-shadow: 0 0 0 0 rgba(0,40,120,0);
-    background-position: 0 0;
+
+  .subBtn {
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 500;
+    width: 150px;
+    margin: 20px;
+    color: rgb(209,209,217);
+    text-decoration: none;
+    text-shadow: 0 -1px 2px rgba(0,0,0,.2);
+    padding: .5em 1em;
+    outline: none;
+    border-radius: 3px;
+    background: linear-gradient(rgb(110,112,120), rgb(81,81,86)) rgb(110,112,120);
+    box-shadow:
+            0 1px rgba(255,255,255,.2) inset,
+            0 3px 5px rgba(0,1,6,.5),
+            0 0 1px 1px rgba(0,1,6,.2);
+    transition: .2s ease-in-out;
+  }
+  .subBtn:hover:not(:active) {
+    background: linear-gradient(rgb(126,126,134), rgb(70,71,76)) rgb(126,126,134);
+  }
+  .subBtn:active {
+    top: 1px;
+    background: linear-gradient(rgb(76,77,82), rgb(56,57,62)) rgb(76,77,82);
+    box-shadow:
+            0 0 1px rgba(0,0,0,.5) inset,
+            0 2px 3px rgba(0,0,0,.5) inset,
+            0 1px 1px rgba(255,255,255,.1);
   }
 
   .photoContainer {
@@ -58,6 +74,8 @@
   .pageNumber {
     cursor: pointer;
     margin-right: 10px;
+    background-color: #7797c1;
+    border-color: #7797c1;
   }
 
   .activePage {
