--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -5,6 +5,7 @@
   width: 600px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 50px;
   border: 2px solid black;
   padding-left: 30px;
@@ -14,36 +15,36 @@
   }
 
   .subBtn {
-    cursor: pointer;
+    display: block;
+    color: $blueLikeNavbar;
     position: relative;
-    display: inline-block;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 10px;
     width: 150px;
-    margin: 20px;
-    color: rgb(209,209,217);
-    text-decoration: none;
-    text-shadow: 0 -1px 2px rgba(0,0,0,.2);
-    padding: .5em 1em;
-    outline: none;
-    border-radius: 3px;
-    background: linear-gradient(rgb(110,112,120), rgb(81,81,86)) rgb(110,112,120);
-    box-shadow:
-            0 1px rgba(255,255,255,.2) inset,
-            0 3px 5px rgba(0,1,6,.5),
-            0 0 1px 1px rgba(0,1,6,.2);
-    transition: .2s ease-in-out;
-  }
-  .subBtn:hover:not(:active) {
-    background: linear-gradient(rgb(126,126,134), rgb(70,71,76)) rgb(126,126,134);
-  }
-  .subBtn:active {
-    top: 1px;
-    background: linear-gradient(rgb(76,77,82), rgb(56,57,62)) rgb(76,77,82);
-    box-shadow:
-            0 0 1px rgba(0,0,0,.5) inset,
-            0 2px 3px rgba(0,0,0,.5) inset,
-            0 1px 1px rgba(255,255,255,.1);
+    border: 3px solid #375c89;
+    transition: all 100ms ease;
+    //box-shadow: 0 4px 10px 2px rgba(black, 0.2);
+
+    &:hover {
+      cursor: pointer;
+      color: white;
+      background-color: $blueLikeNavbar;
+      box-shadow: none;
+      //border: 3px solid $primaryColor;
+    }
+
+    &:active {
+      background-color: $mainDarkBlueColor;
+      border-color: $mainDarkBlueColor;
+    }
+
+    &:disabled {
+      background-color: $disabledColor;
+      border-color: $disabledColor;
+      color: #f0f2f5;
+    }
+
   }
 
   .photoContainer {
